--- a/css/modal.css
+++ b/css/modal.css
@@ -82,6 +82,18 @@ doit être caché en desktop d'où le display: none */
     align-items: center;
     color: #ff0000;
   }
+
+  .topnav a:hover {
+    background-color: #ff0000;
+    color: #ffffff;
+    border-radius: 15px;
+  }
+  
+  .topnav a.active {
+    background-color: #ff0000;
+    color: #ffffff;
+    border-radius: 15px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -105,6 +117,18 @@ doit être caché en desktop d'où le display: none */
     display: block;
     align-items: center;
     color: #ff0000;
+  }
+
+  .topnav a:hover {
+    background-color: #ff0000;
+    color: #ffffff;
+    border-radius: 15px;
+  }
+  
+  .topnav a.active {
+    background-color: #ff0000;
+    color: #ffffff;
+    border-radius: 15px;
   }
 }
 
@@ -588,23 +612,22 @@ footer {
 @media screen and (max-width: 667px) {
 
   .hero-content {
-    max-width: 150%;
+    width: 100%;
     margin: 0 auto;
     padding: 0 auto;
   }
 
   .hero-headline {
-    font-size: 1.65em;
-    font-weight: bolder;
+    width: 70%;
     text-align: center;
-    margin-left: -13%;
+    font-size: 1.25em;
+    font-weight: bolder;
     margin-bottom: -30px;
   }
 
   .hero-text {
-    max-width: 80%;
-    font-size: 0.75em;
-    margin-left: -4%;
+    width: 70%;
+    font-size: 0.65em;
     text-align: justify;
   }
 }
@@ -612,7 +635,7 @@ footer {
 /* Partie tablette */
 @media screen and (min-width: 670px) and (max-width: 800px) {
   .hero-content {
-    max-width: 150%;
+    width: 100%;
     margin: 0 auto;
     padding: 0 auto;
   }
@@ -621,12 +644,11 @@ footer {
     font-size: 2.5em;
     font-weight: bolder;
     text-align: center;
-    margin-left: -3%;
     margin-bottom: -30px;
   }
 
   .hero-text {
-    max-width: 100%;
+    width: 100%;
     font-size: 1.15em;
     text-align: justify;
   }
