utilisation méthode trim()

--- a/css/modal.css
+++ b/css/modal.css
@@ -254,34 +254,6 @@ input::placeholder {
   font-weight: normal;
 }
 
-.formData[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.4em;
-  color: #e54858;
-  display: block;
-  margin-top: 7px;
-  margin-bottom: 7px;
-  text-align: right;
-  line-height: 0.3;
-  opacity: 0;
-  transition: 0.3s;
-}
-
-.formData[data-error-visible="true"]::after {
-  opacity: 1;
-}
-
-.formData[data-error-visible="true"] .text-control {
-  border: 2px solid #e54858;
-} /*A voir si nécessaire info dans fichier JS*/
-
-
-input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-}
-
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -651,4 +623,35 @@ footer {
     opacity: 1;
   }
 }
+
+
+/* ------- Mise en page des alertes --------- */ 
+.formData[data-error]::after {
+  content: attr(data-error);
+  font-size: 0.4em;
+  color: #e54858;
+  display: block;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  text-align: right;
+  line-height: 0.3;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.formData[data-error-visible="true"]::after {
+  opacity: 1;
+}
+
+.formData[data-error-visible="true"] .text-control {
+  border: 2px solid #e54858;
+} /*A voir si nécessaire info dans fichier JS*/
+
+
+input[data-error]::after {
+    content: attr(data-error);
+    font-size: 0.4em;
+    color: red;
+}
+
 
