--- a/css/modal.css
+++ b/css/modal.css
@@ -38,6 +38,9 @@ img {
 .topnav {
   overflow: hidden;
   margin: 3.5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .header-logo {
   float: left;
@@ -88,21 +91,24 @@ doit être caché en desktop d'où le display: none */
     color: #ffffff;
     border-radius: 15px;
   }
-  
+
   .topnav a.active {
     background-color: #ff0000;
     color: #ffffff;
     border-radius: 15px;
   }
+
+  .main-navbar {
+    position: fixed;
+    right: 0;
+    top: 100px;
+    background: white;
+    z-index: 10;
+  }
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
+
   .topnav.responsive a {
     float: none;
     display: block;
@@ -124,7 +130,7 @@ doit être caché en desktop d'où le display: none */
     color: #ffffff;
     border-radius: 15px;
   }
-  
+
   .topnav a.active {
     background-color: #ff0000;
     color: #ffffff;
@@ -197,7 +203,7 @@ main {
 
 .bground {
   display: none;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   left: 0;
   top: 0;
@@ -535,12 +541,18 @@ footer {
   .hero-section {
     display: block;
     box-shadow: unset;
+    min-height: 100%;
   }
 
   .hero-content {
     background: #fff;
     color: #000;
     padding: 20px;
+    min-width: 100%;
+  }
+
+  .hero-text {
+    width: 100%;
   }
 
   .hero-content::after {
@@ -566,6 +578,10 @@ footer {
     margin-top: 5px;
     text-align: center;
   }
+
+  .header-logo img {
+    width: 150px;
+  }
 }
 
 @media screen and (max-width: 667px) {
@@ -577,7 +593,6 @@ footer {
   }
 
   .hero-headline {
-    width: 70%;
     text-align: center;
     font-size: 1.25em;
     font-weight: bolder;
@@ -585,7 +600,6 @@ footer {
   }
 
   .hero-text {
-    width: 70%;
     font-size: 0.65em;
     text-align: justify;
   }
@@ -625,7 +639,7 @@ footer {
 }
 
 
-/* ------- Mise en page des alertes --------- */ 
+/* ------- Mise en page des alertes --------- */
 .formData[data-error]::after {
   content: attr(data-error);
   font-size: 0.4em;
@@ -652,6 +666,26 @@ input[data-error]::after {
     content: attr(data-error);
     font-size: 0.4em;
     color: red;
+}
+
+.error span {
+  color: red;
+  font-size: .8rem;
+  margin-top: 10px;
+}
+
+.error input {
+  border: 2px solid red;
+}
+
+.success span {
+  display: none;
+}
+
+.success input {
+  border: 2px solid green;
+  color: green;
+  font-size: .8rem;
 }
 
 
